--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body {
     text-align: center;
+    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
 }
 
 h1 {
     font-family: Monoton;
     font-size: 70px;
     margin: 0.2em;
+    color: white;
 }
 
 h2 {
@@ -19,7 +21,9 @@ h2:first-of-type {
 table,
 tr,
 td {
-    border: 1px solid black;
+    border: 1px solid white;
+
+    /*background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);*/
 }
 
 table {
